add rotMultiplier argument to RingShapeMechanic